src/frontend-proxy/frontend-proxy-k8s.yaml
# Kubernetes manifest for frontend-proxy
# Auto-generated from opentelemetry-demo.yaml
# Contains 3 resource(s)
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy
  labels:
    opentelemetry.io/name: frontend-proxy
    app.kubernetes.io/component: frontend-proxy
    app.kubernetes.io/name: frontend-proxy
    app.kubernetes.io/version: 2.1.3
    app.kubernetes.io/part-of: splunk-opentelemetry-demo
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: tcp-service
    targetPort: 8080
  selector:
    opentelemetry.io/name: frontend-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-proxy
  labels:
    opentelemetry.io/name: frontend-proxy
    app.kubernetes.io/component: frontend-proxy
    app.kubernetes.io/name: frontend-proxy
    app.kubernetes.io/version: 2.1.3
    app.kubernetes.io/part-of: splunk-opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      opentelemetry.io/name: frontend-proxy
  template:
    metadata:
      labels:
        opentelemetry.io/name: frontend-proxy
        app.kubernetes.io/component: frontend-proxy
        app.kubernetes.io/name: frontend-proxy
    spec:
      serviceAccountName: splunk-opentelemetry-demo
      containers:
      - name: frontend-proxy
        image: ghcr.io/splunk/opentelemetry-demo/otel-frontend-proxy:2.0.8
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: service
        env:
        - name: OTEL_SERVICE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.labels['app.kubernetes.io/component']
        - name: NODE_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        - name: OTEL_COLLECTOR_NAME
          value: $(NODE_IP)
        - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
          value: cumulative
        - name: ENVOY_ADDR
          value: 0.0.0.0
        - name: ENVOY_PORT
          value: '8080'
        - name: ENVOY_ADMIN_PORT
          value: '10000'
        - name: FLAGD_HOST
          value: flagd
        - name: FLAGD_PORT
          value: '8016'
        - name: FLAGD_UI_HOST
          value: flagd-ui
        - name: FLAGD_UI_PORT
          value: '4000'
        - name: FRONTEND_HOST
          value: frontend
        - name: FRONTEND_PORT
          value: '8080'
        - name: IMAGE_PROVIDER_HOST
          value: image-provider
        - name: IMAGE_PROVIDER_PORT
          value: '8081'
        - name: LOCUST_WEB_HOST
          value: load-generator
        - name: LOCUST_WEB_PORT
          value: '8089'
        - name: OTEL_COLLECTOR_HOST
          value: $(OTEL_COLLECTOR_NAME)
        - name: OTEL_COLLECTOR_PORT_GRPC
          value: '4317'
        - name: OTEL_COLLECTOR_PORT_HTTP
          value: '4318'
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.name=$(OTEL_SERVICE_NAME),service.namespace=opentelemetry-demo,service.version=2.1.3,service.kafka=no
        - name: SECUREAPP_HOST
          value: secureapp-loadgen
        - name: SECUREAPP_PORT
          value: '8080'
        - name: FEATURE_AUTH_ENABLED
          valueFrom:
            secretKeyRef:
              name: workshop-secret
              key: flagd_auth
              optional: true
        - name: FEATURE_USER
          valueFrom:
            secretKeyRef:
              name: workshop-secret
              key: flagd_user
              optional: true
        - name: FEATURE_PASS
          valueFrom:
            secretKeyRef:
              name: workshop-secret
              key: flagd_pw
              optional: true
        resources:
          limits:
            memory: 65Mi
        securityContext:
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 101
        volumeMounts: null
      volumes: null
---
